--- a/escom-bpm-web/src/main/webapp/view/common/period-select.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/period-select.xhtml
@@ -4,31 +4,36 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     
-    <h:panelGrid id="#{_itemPanel}" columns="1" styleClass="ui-grid-col-12 col-padding"> 
-        <p:outputLabel value="#{_titleItem}:"/>
-        <p:selectOneMenu id="#{_itemPanel}_item" value="#{_itemValue}" title="#{_titleItem}" 
-                         disabled="#{_disabled}" 
-                         valueChangeListener="#{_bean[_actionSelect]}"
-                         required="#{param['isRequired'] == _required}"
-                         requiredMessage="#{bundle.Field} [#{_titleItem}] #{bundle.MustBeFilled}"
-                         onchange="itemChange = 1;">
-            <p:ajax update="#{_itemPanel}_period #{_update}" partialSubmit="true" oncomplete="itemChange = 1;"/>
-            <f:selectItems value="#{sessionBean.PERIODS}"/>
-        </p:selectOneMenu>
+    <h:panelGrid id="#{_itemPanel}" columns="1" columnClasses="without-spaces" styleClass="ui-grid-col-12 without-spaces"> 
+        <p:outputLabel value="#{_titleItem}:" rendered="#{!empty(_titleItem)}"/>
+        <h:panelGroup styleClass="ui-grid-col-12 without-spaces">
+            <div class="ui-inputgroup">
+            <p:selectOneMenu id="#{_itemPanel}_item" value="#{_itemValue}" title="#{_titleItem}" 
+                             disabled="#{_disabled}" widgetVar="#{_itemPanel}"
+                             styleClass="ui-grid-col-12"
+                             valueChangeListener="#{_bean[_actionSelect]}"
+                             required="#{param['isRequired'] == _required}"
+                             requiredMessage="#{bundle.Field} [#{_titleItem}] #{bundle.MustBeFilled}"
+                             onchange="itemChange = 1;">
+                <p:ajax update="#{_itemPanel}_period #{_update}" partialSubmit="true" oncomplete="itemChange = 1;"/>
+                <f:selectItems value="#{sessionBean.PERIODS}"/>
+            </p:selectOneMenu>
+            <p:commandButton styleClass="btnClear" icon="ui-icon-close" onclick="PF('#{_itemPanel}').selectValue(null);"/>
+            </div>
+        </h:panelGroup>
                 
-        <h:panelGroup id="#{_itemPanel}_period">
-            <h:panelGrid columns="2" styleClass="col-padding" rendered="#{_itemValue eq 'period'}">
-                <p:outputLabel value="#{bundle.With}:" style="float: right;"/>
-                <p:calendar value="#{_beginDate}" inputStyle="width: 145px;"                        
+        <h:panelGroup id="#{_itemPanel}_period" styleClass="ui-grid-col-12 without-spaces">
+            <h:panelGroup styleClass="ui-grid-col-12" rendered="#{_itemValue eq 'period'}">
+                <div class="ui-inputgroup">                
+                    <p:calendar value="#{_beginDate}" inputStyle="width: 140px;" title="#{bundle.DateBegin}"                       
                             navigator="true" yearRange="c-120:c+20"
                             showHour="true" showMinute="true" pattern="dd.MM.yyyy HH:mm"
                             locale="#{sessionBean.locale}"
                             required="#{param['isRequired'] == _required}"
                             requiredMessage="#{bundle.Field} [#{bundle.DateBegin}] #{bundle.MustBeFilled}"
                             disabled="#{_disabled}">
-                </p:calendar>
-                <p:outputLabel value="#{bundle.At}:" style="float: right;" />
-                <p:calendar value="#{_endDate}" inputStyle="width: 145px;"
+                </p:calendar>                
+                <p:calendar value="#{_endDate}" inputStyle="width: 140px;" title="#{bundle.DateEnd}"
                             navigator="true" yearRange="c-120:c+20"
                             showHour="true" showMinute="true" pattern="dd.MM.yyyy HH:mm"
                             locale="#{sessionBean.locale}"
@@ -36,7 +41,8 @@
                             requiredMessage="#{bundle.Field} [#{bundle.DateEnd}] #{bundle.MustBeFilled}"
                             disabled="#{_disabled}">
                 </p:calendar>
-            </h:panelGrid>
+                </div>
+            </h:panelGroup>
         </h:panelGroup> 
         
     </h:panelGrid>
